--- a/ParserKit.Lang.CSharpNew/ParserKit.Lang.CSharpNew.csproj
+++ b/ParserKit.Lang.CSharpNew/ParserKit.Lang.CSharpNew.csproj
@@ -34,7 +34,16 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="0_Start\Start.cs" />
+    <Compile Include="1_Lexer\CsTokenInfo.cs" />
+    <Compile Include="1_Lexer\MyCsLexer.cs" />
+    <Compile Include="2_Parsers\AstBuilder.cs" />
+    <Compile Include="2_Parsers\CsParseNodeHolder.cs" />
+    <Compile Include="2_Parsers\CsSubParserBase.cs" />
+    <Compile Include="2_Parsers\CsSubParsers.cs" />
+    <Compile Include="2_Parsers\UserLangSheetEz.cs" />
+    <Compile Include="4_Test\Lang01.cs" />
+    <Compile Include="Internal\BridgeGeneratedAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
